--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
           <div class="divider-custom-line"></div>
         </div>
 
-        <div class="container d-flex align-items-center flex-row text-center">
+        <div class="container d-flex justify-content-center align-items-center flex-row text-center">
           <!-- Footer Location-->
           <div class="col-sm-5 mb-lg-0">
             <h4 class="text-uppercase mb-4">Local</h4>
