--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           </p>
           <a
               class="btn btn-outline-primary btn-social mx-1"
-              href="https:/number/wa.me/?text=Como faço o controle zootécnico do meu rebanho?"
+              href="https://wa.me/number?text=Como faço o controle zootécnico do meu rebanho?"
               ><i class="fas fa-phone"></i></a>
         </div>
       </div>
@@ -256,8 +256,8 @@
           Publicações
         </h2>
         <!--Grid Items-->
-        <div class="container d-flex align-items-center flex-column text-secondary">
-          <h2>DISSERTAÇÕES DE MESTRADO</h2>
+        <div class="container d-flex align-items-center flex-column text-secondary text-center">
+          <h2 class="text-uppercase">DISSERTAÇÕES DE MESTRADO</h2>
           <img style="width: 6rem; margin-bottom: 5px;" src="assets/img/uva.jpg" alt="..."/>
           <h3>ANO: 2013</h3>
           <a href="https://ww2.uva.ce.gov.br/apps/common/documentos_mestrazoo/dissertacao_fa032ab41b6ae5b7973745a6d807b212.pdf"><p class="masthead-subheading font-weight-light mb-0">
@@ -320,7 +320,7 @@
       </div>
     </section>
     <!-- galeria Section-->
-    <section class="page-section bg-primary" id="galeria">
+    <section class="page-section portfolio bg-primary" id="galeria">
       <div class="container">
         <!--Section Heading-->
         <h2 class="page-section-heading text-center text-uppercase text-white mb-0">
@@ -328,7 +328,45 @@
         </h2>
         <div class="container d-flex align-items-center flex-column text-secondary"></div>
         <!--Grid Items-->
-      </div>
+        <div class="row justify-content-center">
+          <!--Item 1-->
+          <div class="col-md-6 col-lg-3 mb-5">
+              <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal1">
+                  <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                      <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-2x"></i></div>
+                  </div>
+                  <img class="img-fluid" src="assets/img/gepov.png" alt="..." />
+              </div>
+          </div>
+          <!--Item 2-->
+          <div class="col-md-6 col-lg-3 mb-5">
+            <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal1">
+              <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-2x"></i></div>
+              </div>
+              <img class="img-fluid" src="assets/img/gepov.png" alt="..." />
+            </div>
+          </div>
+          <!--Item 3-->
+          <div class="col-md-6 col-lg-3 mb-5">
+            <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal1">
+              <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-2x"></i></div>
+              </div>
+              <img class="img-fluid" src="assets/img/gepov.png" alt="..." />
+            </div>
+          </div>
+          <!--Item 4-->
+          <div class="col-md-6 col-lg-3 mb-5">
+            <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal1">
+              <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-2x"></i></div>
+              </div>
+              <img class="img-fluid" src="assets/img/gepov.png" alt="..." />
+            </div>
+          </div>
+        </div>
+      </div>  
     </section>
     <!-- eventos Section-->
     <section class="page-section" id="eventos">
@@ -398,7 +436,31 @@
         <small>Copyright &copy; GEPOV 2024</small>
       </div>
     </div>
-    <!-- Portfolio Modals-->
+    <!--Modals-->
+    <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" aria-labelledby="portfolioModal1" aria-hidden="true">
+      <div class="modal-dialog modal-xl">
+          <div class="modal-content">
+              <div class="modal-header border-0"><button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button></div>
+              <div class="modal-body text-center pb-5">
+                  <div class="container">
+                      <div class="row justify-content-center">
+                          <div class="col-lg-8">
+                              <!-- Modal - Title-->
+                              <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Evento</h2>
+                              <!-- Portfolio Modal - Image-->
+                              <img class="img-fluid rounded mb-5" src="assets/img/gepov.png" alt="..." />
+                              <!-- Portfolio Modal - Text-->
+                              <button class="btn btn-outline-dark" data-bs-dismiss="modal">
+                                <i class="fas fa-xmark fa-arrow-left"></i>
+                                voltar  
+                              </button>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
