--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           </p>
           <a
               class="btn btn-outline-primary btn-social mx-1"
-              href="https://wa.me/number?text=Como faço o controle zootécnico do meu rebanho?"
+              href="https://wa.me/send?text=Como faço o controle zootécnico do meu rebanho?"
               ><i class="fas fa-phone"></i></a>
         </div>
       </div>
@@ -142,36 +142,36 @@
           <div class="col-lg-3 mb-5 btn btn-primary mx-1">
             <div class="item mx-auto">
               <img class="img-fluid w-50 mb-4" src="assets/img/equipe/aline.png" alt="..." />
+              <p class="text-uppercase">Profa. dra. Aline Vieria Landim</p>
             </div>
-            <p class="text-uppercase">Profa. dra. Aline Vieria Landim</p>
           </div>
           <!--  Item 2-->
           <div class="col-lg-3 mb-5 btn btn-primary mx-1">
             <div class="item mx-auto">
               <img class="img-fluid w-50 mb-4" src="assets/img/equipe/sander.jpg" alt="..." />
+              <p class="text-uppercase"> Sander Luan Almeida Reis</p>
             </div>
-            <p class="text-uppercase"> Sander Luan Almeida Reis</p>
           </div>
           <!-- Item 3-->
           <div class="col-lg-3 mb-5 btn btn-primary mx-1">
             <div class="item mx-auto">
               <img class="img-fluid w-50 mb-4" src="assets/img/equipe/luane.jpeg" alt="..." />
+              <p class="text-uppercase">Sâmila Luane Almeida Reis</p>
             </div>
-            <p class="text-uppercase">Sâmila Luane Almeida Reis</p>
           </div>
           <!--  Item 4-->
           <div class="col-lg-3 mb-5 btn btn-primary mx-1">
             <div class="item mx-auto">
               <img class="img-fluid w-50 mb-4" src="assets/img/equipe/shayane.jpeg" alt="..." />
+              <p class="text-uppercase">Shayane Barroso de Sousa</p>
             </div>
-            <p class="text-uppercase">Shayane Barroso de Sousa</p>
           </div>
           <!--  Item 5-->
           <div class="col-lg-3 mb-5 btn btn-primary mx-1">
             <div class="item mx-auto">
               <img class="img-fluid w-50 mb-4" src="assets/img/equipe/isa.jpeg" alt="..." />
+              <p class="text-uppercase">Isa Lara Oliveira Martins</p>
             </div>
-            <p class="text-uppercase">Isa Lara Oliveira Martins</p>
           </div>
           <!--  Item 6-->
           <div class="col-lg-3 mb-5 btn btn-primary mx-1">
@@ -224,15 +224,15 @@
           </div>
           <!--  Item 13-->
           <div class="col-lg-3 mb-5 btn btn-primary mx-1">
-            <div class="btn btn-outline-light btn-social mb-4">
-              <a class="nav-link"><i class="fas fa-user"></i></a>
+            <div class="item mx-auto">
+              <img class="img-fluid w-50 mb-4" src="assets/img/equipe/ana.jpg" alt="..." />
+              <p class="text-uppercase">AnaClaudia Alves Primo</p>  
             </div>
-            <p class="text-uppercase">AnaCláudia Alves Primo</p>  
           </div>
           <!--  Item 14-->
           <div class="col-lg-3 mb-5 btn btn-primary mx-1">
-            <div class="item mx-auto">
-              <img class="img-fluid w-50 mb-4" src="#" alt="..." />
+            <div class="btn btn-outline-light btn-social mb-4">
+              <a class="nav-link"><i class="fas fa-user"></i></a>
             </div>
             <p class="text-uppercase">Francisca das chagas Paiva cunha</p>
           </div>
@@ -436,7 +436,7 @@
                  ><i class="fas fa-envelope"></i></a>
               <a
                  class="btn btn-outline-light btn-social mx-1"
-                 href="https://wa.me/number?text=Óla! equipe GEPOV"
+                 href="https://wa.me/send?text=Óla! equipe GEPOV"
                  ><i class="fas fa-phone"></i></a>
               <a
                  class="btn btn-outline-light btn-social mx-1"
