--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           <div class="col-lg-3 mb-5 btn btn-primary mx-1">
             <div class="item mx-auto">
               <img class="img-fluid w-50 mb-4" src="assets/img/equipe/sander.jpg" alt="..." />
-              <p class="text-uppercase"> Sander Luan Almeida Reis</p>
+              <p class="text-uppercase">Sander Luan Almeida Reis</p>
             </div>
           </div>
           <!-- Item 3-->
@@ -283,30 +283,17 @@
             <div class="item mx-auto" data-bs-toggle="modal" data-bs-target="#Modal1">
               <div class="item-caption d-flex align-items-center justify-content-center h-100 w-100">
                 <div class="item-caption-content text-white"><h3 class="text-uppercase mb-0">
-                  dissertação
+                  dissertações
                 </h3></div>
               </div>
               <h2 class=" text-uppercase mb-0">
-                dissertação
+                dissertações
               </h2> 
             </div>
           </div>
           <!--Item 2-->
           <div class="col-md-12  mb-5">
             <div class="item mx-auto" data-bs-toggle="modal" data-bs-target="#Modal2">
-              <div class="item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                <div class="item-caption-content text-center text-white"><h3 class="text-uppercase mb-0">
-                  artigo
-                </h3></div>
-              </div>
-              <h2 class=" text-uppercase mb-0">
-                artigo
-              </h2>
-            </div>
-          </div>
-          <!--Item 3-->
-          <div class="col-md-12 mb-5">
-            <div class="item mx-auto" data-bs-toggle="modal" data-bs-target="#Modal3">
               <div class="item-caption d-flex align-items-center justify-content-center h-100 w-100">
                 <div class="item-caption-content text-center text-white"><h3 class="text-uppercase mb-0">
                   trabalhos
@@ -317,7 +304,33 @@
               </h2>
             </div>
           </div>
+          <!--Item 3-->
+          <div class="col-md-12 mb-5">
+            <div class="item mx-auto" data-bs-toggle="modal" data-bs-target="#Modal3">
+              <div class="item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                <div class="item-caption-content text-center text-white"><h3 class="text-uppercase mb-0">
+                  artigos
+                </h3></div>
+              </div>
+              <h2 class=" text-uppercase mb-0">
+                artigos
+              </h2>
+            </div>
+          </div>
           <!--Item 4-->
+          <div class="col-md-12 mb-5">
+            <div class="item mx-auto" data-bs-toggle="modal" data-bs-target="#Modal4">
+              <div class="item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                <div class="item-caption-content text-center text-white"><h3 class="text-uppercase mb-0">
+                  capitulo de livro
+                </h3></div>
+              </div>
+              <h2 class=" text-uppercase mb-0">
+                capitulo de livro
+              </h2>
+            </div>
+          </div>
+          <!--Item 5-->
           <div class="col-md-12 mb-5">
             <div class="item mx-auto" data-bs-toggle="modal" data-bs-target="#Modal4">
               <div class="item-caption d-flex align-items-center justify-content-center h-100 w-100">
@@ -506,7 +519,7 @@
           </div>
       </div>
     </div>
-  <div class="modal modal fade" id="FormEmail" tabindex="-1" aria-labelledby="FormEmail" aria-hidden="true">
+  <div class="modal fade" id="FormEmail" tabindex="-1" aria-labelledby="FormEmail" aria-hidden="true">
     <div class="modal-dialog modal-xl">
       <div class="modal-content">
         <div class="modal-header border-0"><button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button></div>
@@ -522,7 +535,7 @@
                     <label for="message">Mensagem</label>
                   </div>
                   <div class="d-grid">
-                      <button class="btn btn-outline-dark" id="submitButton" type="submit">Submit</button>
+                      <button class="btn btn-outline-dark" id="submitButton" type="submit">enviar</button>
                   </div>
               </form>
           </div> 
