--- a/index.html
+++ b/index.html
@@ -196,10 +196,10 @@
           </div>
           <!--  Item 9-->
           <div class="col-lg-3 mb-5 btn btn-primary mx-1">
-            <div class="btn btn-outline-light btn-social mb-4">
-              <a class="nav-link"><i class="fas fa-user"></i></a>
+            <div class="item mx-auto">
+              <img class="img-fluid w-50 mb-4" src="assets/img/equipe/neto.jpeg" alt="..." />
+              <p class="text-uppercase">Célio Marrocos Aragão Neto</p>
             </div>
-            <p class="text-uppercase">Célio Marrocos Aragão Neto</p>
           </div>
           <!--  Item 10-->
           <div class="col-lg-3 mb-5 btn btn-primary mx-1">
