--- a/index.html
+++ b/index.html
@@ -547,24 +547,170 @@
               <div class="modal-header border-0"><button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button></div>
               <div class="modal-body text-center pb-5">
                   <div class="container">
-                    <div class="container d-flex align-items-center flex-column text-secondary text-center">
-                      <h2 class="text-uppercase">artigos</h2>
-                      <img style="width: 6rem; margin-bottom: 5px;" src="assets/img/uva.jpg" alt="..."/>
-                      <p class="masthead-subheading font-weight-light mb-3 w-50">
-                        <a href="https://www.sciencedirect.com/science/article/pii/S0921448824000142?via%3Dihub" target="_black">
-                        Adaptive, morphometric and productive responses of Brazilian hair lambs: Crossing between indigenous breeds -
-                        A machine learning approach</a>             
-                      </p>
-                      <p class="masthead-subheading font-weight-light mb-3 w-50">
-                        <a href="https://www.sciencedirect.com/science/article/pii/S0921448824000142?via%3Dihub" target="_black">
-                        Adaptive, morphometric and productive responses of Brazilian hair lambs: Crossing between indigenous breeds -
-                        A machine learning approach</a>             
-                      </p>
-                      <p class="masthead-subheading font-weight-light mb-3 w-50">
-                        <a href="https://www.sciencedirect.com/science/article/pii/S0921448824000142?via%3Dihub" target="_black">
-                        Adaptive, morphometric and productive responses of Brazilian hair lambs: Crossing between indigenous breeds -
-                        A machine learning approach</a>             
-                      </p>
+                    <div class="container d-flex  flex-column text-secondary text-center">
+                      <h2 class="text-uppercase mb-4">artigos</h2>
+                      
+                      <a class="d-flex justify-content-around align-items-center" 
+                      href="https://drive.google.com/file/d/1nAozQMozMEdfZDuaOI6wc_c66VE_eMJ5/view?usp=sharing" target="_black">
+                        <p class="masthead-subheading font-weight-light mb-3 w-50">
+                          Adaptive, morphometric and productive responses of Brazilian hair lambs: Crossing between indigenous breeds -
+                          A machine learning approach
+                        </p>
+                        <i class="fas fa-download w-25"></i>             
+                      </a>
+                      <a class="d-flex justify-content-around align-items-center" 
+                      href="https://drive.google.com/file/d/1rqwzPBb_Z4NXdjFmXOnBi3-UNHtbKt_S/view?usp=sharing" target="_black">
+                        <p class="masthead-subheading font-weight-light mb-3 w-50">
+                          Assessment of FecG genotypes on reproductive traits in Brazilian Morada Nova and Santa Ines sheep
+                        </p>
+                        <i class="fas fa-download w-25"></i> 
+                      </a>             
+                      <a class="d-flex justify-content-around align-items-center"
+                      href="https://drive.google.com/file/d/1IGnX822-0XSuFYFf8OGDTeF1PSH4Ce8H/view?usp=sharing" target="_black">
+                        <p class="masthead-subheading font-weight-light mb-3 w-50">
+                          Bioeconomic analysis of total replacement of corn grain
+                          with by‐product from biscuit manufacture for purebred and crossbred
+                          Morada Nova lambs in feedlot system in the Brazilian semi‐arid region
+                        </p>
+                        <i class="fas fa-download w-25"></i> 
+                      </a>             
+                      <a class="d-flex justify-content-around align-items-center"
+                      href="https://drive.google.com/file/d/1BRj_Zx8CktsDxf6WHl0B7_0KFfMcwazU/view?usp=sharing" target="_black">
+                        <p class="masthead-subheading font-weight-light mb-3 w-50">
+                          Carcass traits and morphometry, typifcation of the Longissimus dorsi
+                          muscle and non‐carcass components of hair lambs: can biscuit bran
+                          completely replace corn? A machine learning approach
+                        </p>
+                        <i class="fas fa-download w-25"></i>
+                      </a>             
+                      <a class="d-flex justify-content-around align-items-center"
+                      href="https://drive.google.com/file/d/13EL2MquZ5mp7FxN6ysqo7RfzjTfSx_sf/view?usp=sharing" target="_black">
+                        <p class="masthead-subheading font-weight-light mb-3 w-50">
+                          Changes on the physicochemical and
+                          fatty acid profile of meat induced by
+                          inclusion of biscuit bran in lamb diet
+                        </p>
+                        <i class="fas fa-download w-25"></i>
+                      </a>             
+                      <a class="d-flex justify-content-around align-items-center"
+                      href="https://drive.google.com/file/d/1OH9duPtCgDU_nASDrCY0FiEBjL5evDs9/view?usp=sharing" target="_black">
+                        <p class="masthead-subheading font-weight-light mb-3 w-50">
+                          CUSTOS E RECEITA BRUTA COM O PROCESSAMENTO DE OVINOS
+                          MORADA NOVA SUBMETIDOS A DIFERENTES MANEJOS
+                          ALIMENTARES NO SEMIÁRIDO NORDESTINO
+                        </p>
+                        <i class="fas fa-download w-25"></i>
+                      </a>             
+                      <a class="d-flex justify-content-around align-items-center"
+                      href="https://drive.google.com/file/d/12V0jLW9-mR8I5RGVbqlPoxyxAitrZOuO/view?usp=sharing" target="_black">
+                        <p class="masthead-subheading font-weight-light mb-3 w-50">
+                          Desempenho produtivo e características de carcaça de cordeiros
+                          Rabo Largo puro e cruzados com Santa Inês
+                        </p>
+                        <i class="fas fa-download w-25"></i>
+                      </a>             
+                      <a class="d-flex justify-content-around align-items-center"
+                      href="https://drive.google.com/file/d/1rwboWdHeJNOBV7fU2ta0cFd3bmq86PvY/view?usp=sharing" target="_black">
+                        <p class="masthead-subheading font-weight-light mb-3 w-50">
+                          Análise econômico-financeira do uso de farelo de biscoito como alternativa energética em dietas para cordeiros confinados 
+                        </p>
+                        <i class="fas fa-download w-25"></i>
+                      </a>             
+                      <a class="d-flex justify-content-around align-items-center"
+                      href="https://drive.google.com/file/d/1mzi2XYGHdFxTq4Fwl0t8JLql1cY9Qa2N/view?usp=sharing" target="_black">
+                        <p class="masthead-subheading font-weight-light mb-3 w-50">
+                          Effect of breed on meat quality and global acceptance of native lambs and their crosses
+                        </p>
+                        <i class="fas fa-download w-25"></i>
+                      </a>             
+                      <a class="d-flex justify-content-around align-items-center"
+                      href="https://drive.google.com/file/d/1xW7fEbh75a5HYsljVBEJuOqAtYB1QWiR/view?usp=sharing" target="_black">
+                        <p class="masthead-subheading font-weight-light mb-3 w-50">
+                          Efects of by‐product from biscuit industry on performance
+                          and carcass traits of fattening Morada Nova lambs
+                        </p>
+                        <i class="fas fa-download w-25"></i>
+                      </a>             
+                      <a class="d-flex justify-content-around align-items-center"
+                      href="https://drive.google.com/file/d/18Y6p2bj14xQpjfarv3ksv-mwkfk-ieH1/view?usp=sharing" target="_black">
+                        <p class="masthead-subheading font-weight-light mb-3 w-50">
+                          Effects of dietary energy content and source using by-products on carcass
+                          and meat quality traits of cull ewes
+                        </p>
+                        <i class="fas fa-download w-25"></i>
+                      </a>             
+                      <a class="d-flex justify-content-around align-items-center"
+                      href="https://drive.google.com/file/d/1ySUPiX8jHYRuDsmxDWB0f7_B17NZbdD9/view?usp=sharing" target="_black">
+                        <p class="masthead-subheading font-weight-light mb-3 w-50">
+                          Efects of replacing corn with by‐product from biscuit manufacture
+                          on feed intake, digestibility, nitrogen balance, ingestive behavior,
+                          and growth performance of pure or crossbred Morada Nova sheep
+                        </p>
+                        <i class="fas fa-download w-25"></i>
+                      </a>             
+                      <a class="d-flex justify-content-around align-items-center"
+                      href="https://drive.google.com/file/d/1lqP8ni_gxC0agCVM7PYHKwcIKQH3rZOB/view?usp=sharing" target="_black">
+                        <p class="masthead-subheading font-weight-light mb-3 w-50">
+                          Feeding restriction in the pre and postpartum period of hair
+                          ewes raised in the semi‐arid region: implications on performance
+                          and carcass traits of the progeny  
+                        </p>
+                        <i class="fas fa-download w-25"></i>
+                      </a>             
+                      <a class="d-flex justify-content-around align-items-center"
+                      href="https://drive.google.com/file/d/1Js6cV_H6hbwY8aw-5rgZNBKfdLFY98Je/view?usp=sharing" target="_black">
+                        <p class="masthead-subheading font-weight-light mb-3 w-50">
+                          Gene expression in the Longissimus dorsi muscle related to meat
+                          quality from tropical hair lambs
+                        </p>
+                        <i class="fas fa-download w-25"></i>
+                      </a>             
+                      <a class="d-flex justify-content-around align-items-center"
+                      href="https://drive.google.com/file/d/1MYr_3Atmi2Z-R_Rvfk83QXY_BG1p34ll/view?usp=sharing" target="_black">
+                        <p class="masthead-subheading font-weight-light mb-3 w-50">
+                          Machine learning applied to understand perceptions, habits and
+                          preferences of lamb meat consumers in the Brazilian semi-arid region
+                        </p>
+                        <i class="fas fa-download w-25"></i>
+                      </a>
+                      <a class="d-flex justify-content-around align-items-center"
+                      href="https://drive.google.com/file/d/1aK7o4XT07sZFMDeRfWXv0pzAwS68WhSY/view?usp=sharing" target="_black">
+                        <p class="masthead-subheading font-weight-light mb-3 w-50">
+                          Qualidade de carne de ovinos Morada Nova submetidos diferents manejos alimentares
+                        </p>
+                        <i class="fas fa-download w-25"></i>
+                      </a> 
+                      <a class="d-flex justify-content-around align-items-center"
+                      href="https://drive.google.com/file/d/1PsBRdL1Ig_95mmaIcJuw6pA5zstk_t54/view?usp=sharing" target="_black">
+                        <p class="masthead-subheading font-weight-light mb-3 w-50">
+                          Morada Nova lambs’ meat production potential description through morphometric
+                          evaluation
+                        </p>
+                        <i class="fas fa-download w-25"></i>
+                      </a>
+                      <a class="d-flex justify-content-around align-items-center"
+                      href="https://drive.google.com/file/d/12wR0LXbAIcRSNS7HDRcyGSPfTPxd29gS/view?usp=sharing" target="_black">
+                        <p class="masthead-subheading font-weight-light mb-3 w-50">
+                          Nutritional efects and feeding behavior in ewes fed with biscuit bran
+                          and cashew nut bran, with diferent energy levels
+                        </p>
+                        <i class="fas fa-download w-25"></i>
+                      </a>
+                      <a class="d-flex justify-content-around align-items-center"
+                      href="https://drive.google.com/file/d/1URL8b2tbq9N-3MqK17Od2JtSlA7tN6tp/view?usp=sharing" target="_black">
+                        <p class="masthead-subheading font-weight-light mb-3 w-50">
+                          Seep meat production in the Brazilian semi-arid region:crossing between indigenous breeds
+                        </p>
+                        <i class="fas fa-download w-25"></i>
+                      </a> 
+                      <a class="d-flex justify-content-around align-items-center"
+                      href="https://drive.google.com/file/d/1Dwdw_JAkhbI-hBCp5INTlSH7aDOnuR6A/view?usp=sharing" target="_black">
+                        <p class="masthead-subheading font-weight-light mb-3 w-50">
+                          Tissue and centesimal composition of the 12th rib of lambs from genetic groups different
+                        </p>
+                        <i class="fas fa-download w-25"></i>
+                      </a>                
+                      
                     </div>
                     <div class="d-grid">
                       <button class="btn btn-outline-dark" data-bs-dismiss="modal" type="button" aria-label="Close">voltar</button>
