--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
           Publicações
         </h2>
         <!--Grid Items-->
-        <div class="modals align-items-center">
+        <div class="modals align-items-center justify-content-center">
           <!--Item 1-->
           <div class="col-md-12 mb-5" onclick="modal1()">
             <div class="item mx-auto" data-bs-toggle="modal" data-bs-target="#Modal1">
@@ -296,7 +296,7 @@
             </div>
           </div>
           <!--Item 2-->
-          <div class="col-md-12  mb-5">
+          <!--<div class="col-md-12  mb-5">
             <div class="item mx-auto" data-bs-toggle="modal" data-bs-target="#Modal2">
               <div class="item-caption d-flex align-items-center justify-content-center h-100 w-100">
                 <div class="item-caption-content text-center text-white"><h3 class="text-uppercase mb-0">
@@ -307,7 +307,7 @@
                 trabalhos
               </h2>
             </div>
-          </div>
+          </div>-->
           <!--Item 3-->
           <div class="col-md-12 mb-5" onclick="modal3()">
             <div class="item mx-auto" data-bs-toggle="modal" data-bs-target="#Modal3">
@@ -322,7 +322,7 @@
             </div>
           </div>
           <!--Item 4-->
-          <div class="col-md-12 mb-5">
+          <!--<div class="col-md-12 mb-5">
             <div class="item mx-auto" data-bs-toggle="modal" data-bs-target="#Modal4">
               <div class="item-caption d-flex align-items-center justify-content-center h-100 w-100">
                 <div class="item-caption-content text-center text-white"><h3 class="text-uppercase mb-0">
@@ -333,9 +333,9 @@
                 capitulo de livro
               </h2>
             </div>
-          </div>
+          </div>-->
           <!--Item 5-->
-          <div class="col-md-12 mb-5">
+          <!--<div class="col-md-12 mb-5">
             <div class="item mx-auto" data-bs-toggle="modal" data-bs-target="#Modal5">
               <div class="item-caption d-flex align-items-center justify-content-center h-100 w-100">
                 <div class="item-caption-content text-center text-white"><h3 class="text-uppercase mb-0">
@@ -347,7 +347,7 @@
               </h2>
             </div>
           </div>
-        </div>
+        </div>-->
       </div>
     </section>
     <!-- galeria Section-->
